--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
   font-family: 'Roboto', sans-serif;
   margin: 0 auto;
   text-align: center;
+  background-image: url(chapo-guzman.jpg);
+  background-size: 100%;
 }
 
 header {
@@ -18,9 +20,22 @@ header {
 
 	}
 
-.display {
-	flaot:left;
+.scoreboard1 {
+	height: 50px;
+	width:50px;
+	background-color: blue;
 }
+
+.scoreboard2 {
+	height: 50px;
+	width:50px;
+	background-color: red;
+}
+
+.scores {
+height: 50px;
+width:50px;
+background-color: cyan;}
 
 
 h1 {
