--- a/style.css
+++ b/style.css
@@ -1,15 +1,24 @@
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Anonymous Pro';
   margin: 0 auto;
   text-align: center;
   background-image: url(chapo-guzman.jpg);
   background-size: 100%;
+  color:black;
 }
 
 header {
-  background-color: red;
+  background-image:url(prison.jpg);
+  background-size: 100%;
   width: 100%;
-  height: 60px;
+  height: 960px;
+  color: #fff;
+}
+
+#overlay {
+	width:100%;
+	height:960px;
+	background-color: rgba(17,17,17, 0.6);
 }
 
 .numbers {
@@ -17,35 +26,55 @@ header {
 	width:50px;
 	font-size: 38px;
 	text-align: center;
+	padding:10px;
+	margin-top: 200px;
+	margin-bottom: 30px;
 
 	}
 
-.scoreboard1 {
-	height: 50px;
-	width:50px;
+.display {
+height:200px;
+width:200px;
+}
+
+.s {
+	height: 150px;
+	width:150px;
 	background-color: blue;
 }
 
-.scoreboard2 {
-	height: 50px;
-	width:50px;
+.scores {
+	height: 150px;
+	width:150px;
 	background-color: red;
 }
 
 .scores {
-height: 50px;
-width:50px;
-background-color: cyan;}
+height: 350px;
+width:150px;
+background-color: #112222;
+display: inline-block;
+right:0px;}
 
+.chapo {
+	height:50%;
+	margin-right: -450px;
+}
 
 h1 {
   margin: 0 auto;
-  font-size: 40px
+  font-size: 120px;
 }
 
 section {
   width: 100%;
   height: 500px;
+}
+
+#text-container{
+	height:400px;
+	width:400px;
+	margin-bottom: 200px
 }
 
 .one {
