--- a/style.css
+++ b/style.css
@@ -2,13 +2,14 @@ body {
   font-family: 'Anonymous Pro';
   margin: 0 auto;
   text-align: center;
-  background-image: url(chapo-guzman.jpg);
+  background-color: white;
   background-size: 100%;
   color:black;
 }
 
 header {
   background-image:url(prison.jpg);
+  background-repeat: no-repeat;
   background-size: 100%;
   width: 100%;
   height: 960px;
@@ -17,8 +18,12 @@ header {
 
 #overlay {
 	width:100%;
-	height:960px;
+	height:889px;
 	background-color: rgba(17,17,17, 0.6);
+}
+
+#padlock img {
+	margin-bottom: -184px;
 }
 
 .numbers {
@@ -27,34 +32,35 @@ header {
 	font-size: 38px;
 	text-align: center;
 	padding:10px;
-	margin-top: 200px;
-	margin-bottom: 30px;
+	margin-bottom: 113px;
 
 	}
 
-.display {
+	.begin {
+		height:70px;
+		width:180px;
+		border-radius: 25px
+		font-size:38px;
+		display: inline-block;
+		text-align: center;
+	}
+
+#display {
 height:200px;
 width:200px;
 }
 
-.s {
-	height: 150px;
-	width:150px;
-	background-color: blue;
-}
 
-.scores {
-	height: 150px;
-	width:150px;
-	background-color: red;
-}
+
 
 .scores {
 height: 350px;
 width:150px;
 background-color: #112222;
 display: inline-block;
-right:0px;}
+right:0px;
+border-radius:25px;
+color:white;}
 
 .chapo {
 	height:50%;
