--- a/style.css
+++ b/style.css
@@ -8,9 +8,18 @@ body {
 }
 
 header {
-  background-image:url(prison.jpg);
+	background: url(prison.jpg) no-repeat center center fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+/*  background-image:url(prison.jpg);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: 100%;*/
   width: 100%;
   height: 960px;
   color: #fff;
@@ -22,8 +31,13 @@ header {
 	background-color: rgba(17,17,17, 0.6);
 }
 
+div#padlock {
+	float:left;
+}
+
 #padlock img {
 	margin-bottom: -184px;
+	float:left;
 }
 
 .numbers {
@@ -46,12 +60,15 @@ header {
 	}
 
 #display {
-height:200px;
+height:50px;
 width:200px;
+position: relative;
+background-color: transparent;
+top:-250px;
+left:410px;
+
+
 }
-
-
-
 
 .scores {
 height: 350px;
@@ -60,11 +77,11 @@ background-color: #112222;
 display: inline-block;
 right:0px;
 border-radius:25px;
-color:white;}
+color:white;
+margin-top: 100px;}
 
 .chapo {
-	height:50%;
-	margin-right: -450px;
+	height:50%
 }
 
 h1 {
@@ -78,17 +95,13 @@ section {
 }
 
 #text-container{
-	height:400px;
-	width:400px;
+	float: left;
+	height:200px;
+	width:600px;
+	margin-top: 38px;
 	margin-bottom: 200px
+	position: relative;
+	top:100px;
 }
 
-.one {
-  background-color: blue;
-}
-
-.two {
-  padding: 50px 0px;
-  background-color: orange;
-}
 
