--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Anonymous Pro', ;
+  font-family: 'Anonymous Pro';
   margin: 0 auto;
   text-align: center;
   background-color: white;
